# code-assistant

./: .gitignore  README.md  pyproject.toml
assets/: building-mini-claude-code.md
src/code_ai/: __init__.py  main.py
src/code_assistant/: __init__.py  app.py  main.py  project-requirement.md  prompts.py
src/code_assistant/agent/: __init__.py  coding_agent.py  memory.py  specialized_agents.py  system_prompt.py
src/code_assistant/config/: __init__.py  models.py  providers.py  settings.py
src/code_assistant/storage/: __init__.py  conversation.py  database.py
src/code_assistant/tools/: __init__.py  file_toolkit.py  git_toolkit.py  search_toolkit.py  shell_toolkit.py
src/code_assistant/ui/: __init__.py
src/code_assistant/ui/components/: __init__.py  approval_dialog.py  file_viewer.py  input_panel.py  model_selector.py  output_panel.py  status_bar.py
src/code_assistant/utils/: __init__.py  cost.py  diff.py  logger.py  slash_commands.py
tests/: __init__.py  conftest.py
tests/test_agent/: test_memory.py
tests/test_config/: test_models.py  test_settings.py
tests/test_storage/: test_conversation.py
tests/test_tools/: test_file_toolkit.py  test_git_toolkit.py  test_search_toolkit.py  test_shell_toolkit.py
tests/test_utils/: test_cost.py  test_diff.py  test_slash_commands.py
