[project]
name = "code-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aravindh", email = "32878238+s-aravindh@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "agno>=1.6.3",
    "openai>=1.90.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
