[project]
name = "code-assistant"
version = "0.1.0"
description = "A TUI-based agentic coding assistant powered by Agno"
readme = "README.md"
authors = [
    { name = "s-aravindh", email = "aravinds1293@hotmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "agno>=2.3.26",
    "anthropic>=0.75.0",
    "openai>=2.15.0",
    "textual>=0.47.0",
    "typer>=0.9.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "tiktoken>=0.6.0",
    "pygments>=2.17.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.0",
    "sqlalchemy>=2.0.45",
]

[project.scripts]
mcc = "code_assistant.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"
